data/derived/sp14/progs/unify/prog0063.ml.out
Characters 155-181:
  | Average (m,n) -> (eval(m,x,y)+.eval(n,x,y))/2.;;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
